--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			You can get the latest release of NCommon below in the releases section below. You can also get the latest source 
 			of NCommon from Github and build from source. See the building from source section below for more information.
 			<br/><br/>
-			Visit the <a href="#">Getting started guide</a> to get an overview of what NCommon is and what it can do for you, or visit
+			Visit the <a href="http://riteshrao.github.com/ncommon/getting-started.html">Getting started guide</a> to get an overview of what NCommon is and what it can do for you, or visit
 			the <a href="#">Documentation</a> section for full documentation on the various features of NCommon.
 		</p>
 		<h2>Current Release</h2>
