- Initial restructuring of documentation.

--- a/getting-started.html
+++ b/getting-started.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>NCommon - Getting Started</title>
-	<link type="text/css" rel="stylesheet" href="default.css"/>
-	<link type="text/css" rel="stylesheet" href="docs.css"/>
+	<link type="text/css" rel="stylesheet" href="css/default.css"/>
+	<link type="text/css" rel="stylesheet" href="css/docs.css"/>
 </head>
 <body>
 	<div class="title">
@@ -21,7 +21,7 @@
 					<li><a href="#addreference">Referencing NCommon</a></li>
 					<li><a href="#configintro">NCommon configuration basics</a></li>
 					<li><a href="#features">NCommon features overview</a></li>
-				<ol>
+				</ol>
 			</li>
 		</ul>
 		<div class="content">
