--- a/index.html
+++ b/index.html
@@ -1,54 +1,126 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>NCommon Project</title>
-	<link type="text/css" rel="Stylesheet" href="css/default.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>NCommon Project</title>
+    <link type="text/css" rel="Stylesheet" href="css/default.css" />
+    <link type="text/css" rel="stylesheet" href="css/shThemeDefault.css"/>
+    <script src="scripts/shCore.js" type="text/javascript"></script>
+    <script src="scripts/shAutoloader.js" type="text/javascript"></script>
 </head>
-
 <body>
-  	<a href="http://github.com/riteshrao/ncommon">
-		<img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
-	</a>
-  	<div id="container">
-
-    	<h1><a href="http://github.com/riteshrao/ncommon">NCommon</a></h1>
-
-    	<div class="description">
-			A light weight framework for building applications in .Net
-    	</div>
-		<p>
-			NCommon is a framework that provides a base for building applications using a Domain Driven Design approach and provides base
-			implementations of common patterns. <span class="todo">TODO - Complete This</span>
-			<br/><br/>
-			You can get the latest release of NCommon below in the releases section below. You can also get the latest source 
-			of NCommon from Github and build from source. See the building from source section below for more information.
-			<br/><br/>
-			Visit the <a href="getting-started.html">Getting started guide</a> to get an overview of what NCommon is and what it can do for you, or visit
-			the <a href="#">Documentation</a> section for full documentation on the various features of NCommon.
-		</p>
-		<h2>Current Release</h2>
-		<p>
-			Current release version of NCommon is 1.2. Download binaries of this release using the links below:
-			<div class="block">
-				<a href="#">NCommon 1.1 (net4.0)</a><br/>
-				<a href="#">NCommon 1.1 (net3.5)</a>
-			</div>
-		<p>
-		<h2>Getting and building from source</h2>
-		<p>
-			NCommon's source is hosted at Github <a href="http://github.com/riteshrao/ncommon">here</a>. 
-			To build from source you must have Powershell 2.0 installed  as NCommon uses a psake build file for building binaries. 
-			Once you have cloned NCommon's repository from Github locally, you can build from source by executing the following commands
-			in a Powershell window.
-		</p>
-		<pre class="margin:0px;padding:0px;">
-			Import-module .\psake <br/>
-			Invoke-psake .\default
-		</pre> 	
-	</div>
+    <a id="gitfork_badge" href="http://github.com/riteshrao/ncommon">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+            alt="Fork me on GitHub" />
+    </a>
+    <div id="container">
+        <header>
+            <h1>
+                <a href="http://github.com/riteshrao/ncommon">NCommon</a></h1>
+            <div class="description">
+                A light weight framework for building applications in .Net
+            </div>
+        </header>
+        <nav id="main">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="getting-started.html">Getting Started</a></li>
+                <li><a href="docs/index.html">Documentation</a></li>
+            </ul>
+        </nav>
+        <section id="content">
+            <p>
+                NCommon is a framework that provides base for building applications using a Domain
+                Driven Design approach and provides base implementations of common patterns. NCommon
+                provides a simple implementation of patterns such as <span class="keyword">Unit of Work</span>,
+                <span class="keyword">Repository</span>, <span class="keyword">Specification</span>
+                and a lot more.
+                <br />
+                <br />
+                You can get the latest release of NCommon below in the releases section below. You
+                can also get the latest source of NCommon from Github and build from source. See
+                the building from source section below for more information.
+                <br />
+                <br />
+                Visit the <a href="getting-started.html">Getting started guide</a> to get an overview
+                of what NCommon is and what it can do for you, or visit the <a href="docs/index.html">
+                    Documentation</a> section for full documentation on the various features of
+                NCommon.
+            </p>
+            <h2>
+                Current Release</h2>
+            <p>
+                Current release version of NCommon is 1.2 and is avialable as NuGet packages. Below
+                are the list of packages avaialble via NuGet
+            </p>
+            <table id="nuget_packages">
+                <thead>
+                    <tr>
+                        <th>Package Id</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon">NCommon</a></td">
+                        <td class="package_desc">Core NCommon package.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.ContainerAdapter.Autofac">NCommon.ContainerAdapter.Autofac</a></td>
+                        <td class="package_desc">Autofac container adapter for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.ContainerAdapter.CastleWindsor">NCommon.ContainerAdapter.CastleWindsor</a></td>
+                        <td class="package_desc">Castle Windsor container adapter for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.ContainerAdapter.Ninject">NCommon.ContainerAdapter.Ninject</a></td>
+                        <td class="package_desc">Ninject container adapter for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.ContainerAdapter.StructureMap">NCommon.ContainerAdapter.StructureMap</a></td>
+                        <td class="package_desc">StructureMap container adapter for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.EntityFramework">NCommon.EntityFramework</a></td>
+                        <td class="package_desc">Entity framework data adapter for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.ContainerAdapter.Unity">NCommon.LinqToSql</a></td>
+                        <td class="package_desc">Linq To Sql data adpater for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.NHibernate">NCommon.NHibernate</a></td>
+                        <td class="package_desc">NHibernate data adpater for NCommon.</td>
+                    </tr>
+                    <tr>
+                        <td class="package_id"><a href="http://nuget.org/List/Packages/NCommon.Mvc">NCommon.Mvc</a></td>
+                        <td class="package_desc">ASP.Net MVC utilities and extensions for NCommon.</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2>Getting and building from source</h2>
+            <p>
+                NCommon's source is hosted at Github <a href="http://github.com/riteshrao/ncommon">here</a>.
+                To build from source you must have Powershell 2.0 installed as NCommon uses a psake
+                build file for building binaries. Once you have cloned NCommon's repository from
+                Github locally, you can build from source by executing the following commands in
+                a Powershell window.
+            </p>
+            <pre class="brush: ps; gutter: false; toolbar: false;">
+            import-module .\psake.psm1
+            invoke-psake .\default.ps1
+            </pre>
+        </section>
+    </div>
+    <script type="text/javascript">
+        SyntaxHighlighter.autoloader(
+            'js jscript javascript scripts/shBrushJScript.js',
+            'c-sharp csharp scripts/shBrushCSharp.js',
+            'sql t-sql scripts/shBrushSql.js',
+            'ps powershell scripts/shBrushPowerShell.js'
+        );
+        SyntaxHighlighter.all();
+    </script>
 </body>
 </html>
