--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </tr>
                 </tbody>
             </table>
-            <h2>Getting and building from source</h2>
+            <h2><a name="source">Getting and building from source</a></h2>
             <p>
                 NCommon's source is hosted at Github <a href="http://github.com/riteshrao/ncommon">here</a>.
                 To build from source you must have Powershell 2.0 installed as NCommon uses a psake
